fix(actions): model workbench setup materials